--- a/css/general.css
+++ b/css/general.css
@@ -22,6 +22,17 @@ a{
     color: green;
 }
 
+article{
+    
+    background-color : rgb(255, 188, 176);
+}
+
+aside{
+    display: flex;
+    background-color : rgb(176, 255, 215);
+    justify-content: flex-end;
+}
+
 .hide{
     display: none;
 }
